--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@
 /* For both containers */
 
 .main {
-  border: 1px solid #b92929;
-  width: 200px;
-  height: 300px;
-  padding: 10px;
-  margin-right: 20px;
-  float: left;
-}
+    border: 1px solid #b92929;
+    width: 200px;
+    height: 300px;
+    padding: 10px;
+    margin-right: 20px;
+    float: left;
+  }
 
 /* For items */
 
@@ -17,6 +17,7 @@
   padding: 5px;
   margin-bottom: 5px;
   background-color: #ccacac;
+  cursor: move;
 }
 
 /* For successful message */
@@ -37,3 +38,32 @@
 .resetbtn {
   margin-top: 10px;
 }
+
+/*
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Drag-And-Drop</title>
+    <!-- CSS file linking -->
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="cont1" class="main">
+      <div class="submain">Image</div>
+      <div class="submain">Text</div>
+      <div class="submain">Icon</div>
+    </div>
+
+    <div id="cont2" class="main"></div>
+
+    <p id="successmsg"></p>
+
+    <button class="resetbtn" onclick="resetBtn()">RESET</button>
+
+    <!-- JS file linking -->
+    <script src="index.js"></script>
+  </body>
+</html>
+*/
