--- a/style.css
+++ b/style.css
@@ -1,1 +1,30 @@
 /* CSS Code */
+
+.container {
+  display: inline-block;
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+}
+
+.droppable {
+  min-height: 100px;
+  border: 1px dashed #ccc;
+  padding: 10px;
+}
+
+.draggable {
+  display: inline-block;
+  margin: 5px;
+  cursor: move;
+  width: 80px;
+}
+
+.drag-over {
+  border-color: #000;
+}
+
+#successMessage {
+  margin-top: 10px;
+  color: green;
+}
